fix layout alignment

--- a/static/css/RiqStyles.css
+++ b/static/css/RiqStyles.css
@@ -97,7 +97,7 @@ i {
     padding-left:5px;
 
     color: #FFF;
-    height:300px;
+    height:340px;
 
 }
 
